Add instructions for exercise 3 tasks 1 & 2

--- a/docs/03_implement_function_calls/0301.md
+++ b/docs/03_implement_function_calls/0301.md
@@ -111,4 +111,6 @@ The key tasks are as follows:
 
      ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0301_AddEnvironmentVariable2.png)
 
+    After saving your changes, select the **Apply** button to finish saving the new connection string. This will restart your API service.
+
 </details>
