--- a/docs/03_implement_function_calls/0302.md
+++ b/docs/03_implement_function_calls/0302.md
@@ -51,9 +51,15 @@ The key tasks are as follows:
 
 ## Learning Resources
 
-TODO!
-
 - [Booking Restaurant - Demo Application](https://github.com/microsoft/semantic-kernel/tree/main/dotnet/samples/Demos/BookingRestaurant)
+- [Save storage of app secrets in development in ASP.NET Core](https://learn.microsoft.com/aspnet/core/security/app-secrets?view=aspnetcore-8.0&tabs=windows)
+- [dotnet add package](https://learn.microsoft.com/dotnet/core/tools/dotnet-add-package)
+- [Introduction to Semantic Kernel](https://learn.microsoft.com/semantic-kernel/overview/)
+- [KernelFunction Class](https://learn.microsoft.com/dotnet/api/microsoft.semantickernel.kernelfunction?view=semantic-kernel-dotnet)
+- [ConfigurationBuilder Class](https://learn.microsoft.com/dotnet/api/microsoft.extensions.configuration.configurationbuilder?view=net-8.0)
+- [IKernelBuilder Interface](https://learn.microsoft.com/dotnet/api/microsoft.semantickernel.ikernelbuilder?view=semantic-kernel-dotnet)
+- [KernelExtensions.AddFromType Method](https://learn.microsoft.com/dotnet/api/microsoft.semantickernel.kernelextensions.addfromtype?view=semantic-kernel-dotnet)
+- [Environment variables and app settings in Azure App Service](https://learn.microsoft.com/azure/app-service/reference-app-settings?tabs=kudu%2Cdotnet)
 
 ## Tips
 
@@ -61,115 +67,204 @@ TODO!
 
 ## Solution
 
-TODO!
-
 <details markdown="block">
 <summary>Expand this section to view the solution</summary>
 
-- GPT function definitions are JSON objects following a particular pattern, with a combination of name, description, and parameters. The definition for the `get_customers` function is as follows:
+- In order to add user secrets to your .NET project, open a console in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file. Then, run the following commands, replacing the secret values with your actual endpoint and API key, respectively.
 
-    ```python
-    functions = [
+    ```sh
+    dotnet user-secrets init
+
+    dotnet user-secrets set "AzureOpenAI:DeploymentName" "gpt-4o"
+    dotnet user-secrets set "AzureOpenAI:Endpoint" "{your_endpoint}"
+    dotnet user-secrets set "AzureOpenAI:ApiKey" "{your_key}"
+    ```
+
+- The code for the `GetBookingsMissingHotelRooms()` method is in the `DatabaseService` class as follows:
+
+    ```csharp
+    public async Task<IEnumerable<Booking>> GetBookingsMissingHotelRooms()
+    {
+        var sql = """
+            SELECT
+                b.BookingID,
+                b.CustomerID,
+                b.HotelID,
+                b.StayBeginDate,
+                b.StayEndDate,
+                b.NumberOfGuests
+            FROM dbo.Booking b
+            WHERE NOT EXISTS
+                (
+                    SELECT 1
+                    FROM dbo.BookingHotelRoom h
+                    WHERE
+                        b.BookingID = h.BookingID
+                );
+            """;
+        await _conn.OpenAsync();
+        using var cmd = new SqlCommand(sql, _conn);
+        using var reader = await cmd.ExecuteReaderAsync();
+        var bookings = new List<Booking>();
+        while (await reader.ReadAsync())
         {
-            "name": "get_customers",
-            "description": "Get a list of customers based on some search criterion.",
-            "parameters": {
-                "type": "object",
-                "properties": {
-                    "search_criterion": {"type": "string", "enum": ["CustomerName", "LoyaltyTier", "DateOfMostRecentStay"]},
-                    "search_value": {"type": "string"},
-                },
-                "required": ["search_criterion", "search_value"],
-            },
+            bookings.Add(new Booking
+            {
+                BookingID = reader.GetInt32(0),
+                CustomerID = reader.GetInt32(1),
+                HotelID = reader.GetInt32(2),
+                StayBeginDate = reader.GetDateTime(3),
+                StayEndDate = reader.GetDateTime(4),
+                NumberOfGuests = reader.GetInt32(5)
+            });
         }
-    ]
+        await _conn.CloseAsync();
+
+        return bookings;
+    }
     ```
 
-- The `handle_chat_prompt_with_functions()` function does three things. First, it echoes the user's prompt to the chat window. After that, it sends the prompt to Azure OpenAI. Finally, it executes the function call that Azure OpenAI returns.
-  - The code for the completed `handle_chat_prompt_with_functions()` function is as follows:
+- The code for the `GetBookingsWithMultipleHotelRooms()` method in the `DatabaseService` class is as follows:
 
-    ```python
-    # Echo the user's prompt to the chat window
-    st.session_state.messages.append({"role": "user", "content": prompt})
-    with st.chat_message("user"):
-        st.markdown(prompt)
+    ```csharp
+    public async Task<IEnumerable<Booking>> GetBookingsWithMultipleHotelRooms()
+    {
+        var sql = """
+            SELECT
+                b.BookingID,
+                b.CustomerID,
+                b.HotelID,
+                b.StayBeginDate,
+                b.StayEndDate,
+                b.NumberOfGuests
+            FROM dbo.Booking b
+            WHERE
+                (
+                    SELECT COUNT(1)
+                    FROM dbo.BookingHotelRoom h
+                    WHERE
+                        b.BookingID = h.BookingID
+                ) > 1;
+            """;
+        await _conn.OpenAsync();
+        using var cmd = new SqlCommand(sql, _conn);
+        using var reader = await cmd.ExecuteReaderAsync();
+        var bookings = new List<Booking>();
+        while (await reader.ReadAsync())
+        {
+            bookings.Add(new Booking
+            {
+                BookingID = reader.GetInt32(0),
+                CustomerID = reader.GetInt32(1),
+                HotelID = reader.GetInt32(2),
+                StayBeginDate = reader.GetDateTime(3),
+                StayEndDate = reader.GetDateTime(4),
+                NumberOfGuests = reader.GetInt32(5)
+            });
+        }
+        await _conn.CloseAsync();
 
-    # Send the user's prompt to Azure OpenAI and display the response
-    # The call to Azure OpenAI is handled in create_chat_completion()
-    # This function loops through the responses and displays them as they come in.
-    # It also appends the full response to the chat history.
-    with st.chat_message("assistant"):
-        message_placeholder = st.empty()
-        full_response = ""
-        response = create_chat_completion_with_functions(deployment_name, st.session_state.messages)
-        response_message = response.choices[0].message
-
-        # Check if GPT returned a function call
-        if response_message.function_call:
-            # Get the function name and arguments
-            function_name = response_message.function_call.name
-            # Verify the function
-            if function_name not in available_functions:
-                full_response = f"Sorry, I don't know how to call the function `{function_name}`."
-            else:
-                function_to_call = available_functions[function_name]
-                # Verify the function has the correct number of arguments
-                function_args = json.loads(response_message.function_call.arguments)
-                if check_args(function_to_call, function_args) is False:
-                    full_response = f"Sorry, I don't know how to call the function `{function_name}` with those arguments."
-                else:
-                    # Call the function
-                    function_to_call(**function_args)
-    st.session_state.messages.append({"role": "assistant", "content": "Table response removed for brevity."})
+        return bookings;
+    }
     ```
 
-- The `create_chat_completion_with_functions()` function reaches out to Azure OpenAI and performs the chat completion, providing it the list of available functions and options.
-  - The code for the completed `create_chat_completion_with_functions()` function is as follows:
+- To add the Semantic Kernel NuGet package, you can run the following command from the command line, in the Web API directory containing your `ContosoSuitesWebAPI.csproj` file.
 
-    ```python
-    # Create an Azure OpenAI client. We create it in here because each exercise will
-    # require at a minimum different base URLs.
-    client = openai.AzureOpenAI(
-        base_url=f"{aoai_endpoint}/openai/deployments/{deployment_name}/",
-        api_key=aoai_api_key,
-        api_version="2023-12-01-preview"
-    )
-    # Create and return a new chat completion request
-    # Be sure to include the "functions" parameter and set "function_call"
-    return client.chat.completions.create(
-        model=deployment_name,
-        messages=[
-            {"role": m["role"], "content": m["content"]}
-            for m in messages
-        ],
-        functions=functions,
-        function_call="auto",
-    )
+    ```powershell
+    dotnet add package Microsoft.SemanticKernel
     ```
 
-- The `get_customers()` function reaches out to ASP.NET Web API and performs the lookup call that you created in Exercise 03, Task 01.
-  - The code for the completed `get_customers()` function is as follows. Note that you will want to replace `localhost:5292` with the URL and port of the Web API service you ran as part of Exercise 03, Task 01.
+- In order to tag a method in the `DatabaseService.cs` file, you will need to include the `Microsoft.SemanticKernel` namespace at the top of the file, along with the other **using** statements.
 
-    ```python
-    full_server_url = f"http://localhost:5292/Customer/?searchCriterion={search_criterion}&searchValue={search_value}"
-    r = requests.get(
-        full_server_url,
-        headers={"Content-Type": "application/json"}
-    )
-    if r.status_code == 200:
-        return st.write(pd.read_json(r.content.decode("utf-8")))
-    else:
-        return f"Failure to find any customers with {search_criterion} {search_value}."
+    ```csharp
+    using Microsoft.SemanticKernel;
     ```
+
+    Then, add `[KernelFunction]` and `[Description()]` descriptors to each of the five methods you want to be available for Semantic Kernel to call. For example, the `GetHotels()` method signature would look like:
+
+    ```csharp
+    [KernelFunction]
+    [Description("Get all hotels.")]
+    public async Task<IEnumerable<Hotel>> GetHotels()
+    ```
+
+    For methods with parameters, include as well a `[Description()]` descriptor for each parameter. For example, the `GetBookingsForHotel()` method would look like:
+
+    ```csharp
+    [KernelFunction]
+    [Description("Get all bookings for a single hotel.")]
+    public async Task<IEnumerable<Booking>> GetBookingsForHotel(
+        [Description("The ID of the hotel")] int hotelId
+        )
+    ```
+
+    Make sure to do this for all five methods, including the two you created in Step 2 of this task.
+- The code to create a new configuration item requires that you add a **using** statement to the top of `Program.cs`:
+
+    ```csharp
+    using Microsoft.Extensions.Configuration;
+    ```
+
+    From there, after creating the **builder** object, add the following code:
+
+    ```csharp
+    var config = new ConfigurationBuilder()
+        .AddUserSecrets<Program>()
+        .AddEnvironmentVariables()
+        .Build()
+        .Get<AppConfig>() ??
+        throw new InvalidOperationException("Configuration is not set up correctly. Ensure you have saved your DeploymentName, Endpoint, and ApiKey secrets for Azure OpenAI, either as user secrets or as environment variables.");
+    
+    config.Validate();
+    ```
+
+- The code to create a singleton `Kernel` is as follows, and should be added below the singleton builder for `CosmosClient`.
+
+    ```csharp
+    builder.Services.AddSingleton<Kernel>((_) =>
+    {
+        IKernelBuilder kernelBuilder = Kernel.CreateBuilder();
+        kernelBuilder.AddAzureOpenAIChatCompletion(
+            deploymentName: config.AzureOpenAI!.DeploymentName!,
+            endpoint: config.AzureOpenAI!.Endpoint!,
+            apiKey: config.AzureOpenAI!.ApiKey!
+        );
+        kernelBuilder.Plugins.AddFromType<DatabaseService>();
+        return kernelBuilder.Build();
+    });
+    ```
+
+- The code to implement the `/Chat` POST request is as follows:
+
+    ```csharp
+    app.MapPost("/Chat", async Task<string> (HttpRequest request) =>
+    {
+        var message = await Task.FromResult(request.Form["message"]);
+        var kernel = app.Services.GetRequiredService<Kernel>();
+        var chatCompletionService = kernel.GetRequiredService<IChatCompletionService>();
+        var executionSettings = new OpenAIPromptExecutionSettings
+        {
+            ToolCallBehavior = ToolCallBehavior.AutoInvokeKernelFunctions
+        };
+        var response = await chatCompletionService.GetChatMessageContentAsync(message.ToString(), executionSettings, kernel);
+        return response?.Content!;
+    })
+        .WithName("Chat")
+        .WithOpenApi();
+    ```
+
+- In order to create an environment variable for your App Service, perform the following actions.
+  - Navigate back to your resource group in the Azure Portal. Then, select the **App Service** named `{your_unique_id}-api`. In the **Settings** menu, choose the **Environment variables** option. Then, navigate to the **App settings** tab and select the **Add** button.
+
+     ![Creating a new environment variable for an Azure App Service](../../media/Solution/0302_AddEnvironmentVariable1.png)
+
+  - Create three environment variables. The first is `AzureOpenAI__DeploymentName` and should have a value of `gpt-4o`. The second is `AzureOpenAI__Endpoint` and should have a value of your Azure OpenAI endpoint URL. The third is `AzureOpenAI__ApiKey` and should have a value of your Azure OpenAI API key. After entering data for an application setting, select **Apply** to save the setting.
+
+     ![Filling in details for the new environment variable for an Azure App Service](../../media/Solution/0301_AddEnvironmentVariable2.png)
+
+    {: .note }
+    > These environment variables should have **two** underscores between "AzureOpenAI" and the name.
+
+    After creating the three application settings, select the **Apply** button to finish saving them. This will restart your API service.
 
 </details>
-
-## Additional Challenges
-
-If you would like to take on an additional challenge, perform the following:
-
-1. Load the contents of Resorts.txt into Cosmos DB in a Resorts collection.
-2. Create a Web API endpoint allowing users to search for resorts by name, nation, or amenities.
-3. Create a new function in the Streamlit application to support this Web API endpoint.
-4. Ask a question of the chat service such as "Which resorts are in Bonaire?"
-5. Ask a question of the chat service such as "Which resorts offer a pool?"
