Reordering exercise 2 to 3 and adding vectorization service and API endpoint

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0302.md
@@ -2,7 +2,7 @@
 title: '2. Create and store vector embeddings'
 layout: default
 nav_order: 2
-parent: 'Exercise 02: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
+parent: 'Exercise 03: Implement contextual grounding using vector search in Azure Cosmos DB for NoSQL'
 ---
 
 # Task 02 - Create and store vector embeddings (45 minutes)
@@ -21,12 +21,12 @@ You will conclude by uploading data supplied by the Contoso Suites staff into th
 
 The key tasks are as follows:
 
-1. Review the Azure Function code in the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder. The function:
+1. Review the Azure Function code in the `CosmosChangeFeedVectorization.cs` file in the `src\ContosoSuitesVectorizationFunction` folder. The function:
    1. Is triggered whenever a document is inserted or updated in the `MaintenanceRequests` container using the Azure Cosmos DB change feed.
    2. Vectorizes text in the `details` field of a maintenance request using a `text-embedding-ada-002` model in Azure OpenAI.
    3. Writes generated vectors into the `request_embeddings` fields of the document and updates it in the `MaintenanceRequests` container.
    4. Marks the document as "Vectorized."
-2. Create a `local.settings.json` file in the `src/ContosoSuitesVectorizationFunction` folder and populate it with the settings needed by the function to run the function locally. Hint, the required values can be identified using the calls to `Environment.GetEnvironmentVariable` in the `CosmosChangeFeedVectorization.cs` file, as well as providing the Cosmos DB connection string required by the input and output bindings of the function.
+2. Create a `local.settings.json` file in the `src\ContosoSuitesVectorizationFunction` folder and populate it with the settings needed by the function to run the function locally. Hint, the required values can be identified using the calls to `Environment.GetEnvironmentVariable` in the `CosmosChangeFeedVectorization.cs` file, as well as providing the Cosmos DB connection string required by the input and output bindings of the function.
 3. Test the function locally and evaluate the inputs and outputs of the function.
    1. Use breakpoints in the function's `Run` method to examine the input collection and processing that occurs as a new record is added.
    2. After starting a local debug session, insert the following document into the `MaintenanceRequests` container and observe the results of the function execution as your breakpoints are hit.
@@ -57,9 +57,9 @@ The key tasks are as follows:
     }
     ```
 
-6. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
+6. Populate the `MaintenanceRequests` container with data from the `PropertyMaintenance.json` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data) of the repository.
 7. Observe the files being processed in the Log Stream and review documents in the Cosmos DB Data Explorer to confirm the function is correctly populating the `request_vector` field for newly added documents.
-8. Execute a query to find documents similar to "air conditioning malfunction" using the `VectorDistance()` function via Cosmos DB Data Explorer. You can find the vector embeddings for "air conditioning malfunction" in the `Query_Vector.txt` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data).
+8. Execute a query to find documents similar to "air conditioning malfunction" using the `VectorDistance()` function via Cosmos DB Data Explorer. You can find the vector embeddings for "air conditioning malfunction" in the `Query_Vector.txt` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data).
 
 ## Success Criteria
 
@@ -86,7 +86,7 @@ The key tasks are as follows:
 <summary>Expand this section to view the solution</summary>
 
 - The steps to review the function app are as follows:
-  - Open the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder.
+  - Open the `CosmosChangeFeedVectorization.cs` file in the `src\ContosoSuitesVectorizationFunction` folder.
   - The `DatabaseName` and `ContainerName` constants defined on lines 16 and 17 refer to the Azure Cosmos DB database created by the Bicep script and the container you created in task 1 of this exercise, respectively. If those values differ in your environment, the values assigned to the constants must be updated to reflect what is in your environment.
   - Locate the `Run` function starting on line 42 and examine the code contained within it.
     - The code on line 49 reduces the list of documents sent to the function to only those that do not have a `Type` of "Vectorized". This prevents the updates pushed by the function back to the `MaintenanceRequests` container from being revectorized by the function.
@@ -95,7 +95,7 @@ The key tasks are as follows:
     - The document's `Type` field is set to "Vectorized".
     - On line 72, the list of input documents is returned, which uses the Cosmos DB output binding to write the documents updated with vector embeddings back into the `MaintenanceRequests` container in Cosmos DB.
 
-- To create a `local.settings.json` file, navigate to the `src/ContosoSuitesVectorizationFunction` directory, create a new file named `local.settings.json`, and add the following content, replacing the bracketed tokens with values from your Azure OpenAI and Azure Cosmos DB services.
+- To create a `local.settings.json` file, navigate to the `src\ContosoSuitesVectorizationFunction` directory, create a new file named `local.settings.json`, and add the following content, replacing the bracketed tokens with values from your Azure OpenAI and Azure Cosmos DB services.
 
     ```json
     {
@@ -117,18 +117,18 @@ The key tasks are as follows:
     - Copy the value of **KEY 1** and paste it into the `AzureOpenAIKey` value of the `local.settings.json` file.
     - Copy the value of **Endpoint** and paste it into the `AzureOpenAIEndpoint` value.
 
-      ![The Azure OpenAI Keys and Endpoint page is displayed, with the copy buttons for KEY 1 and Endpoint highlighted.](../../media/Solution/0202-azure-openai-keys-and-endpoint.png)
+      ![The Azure OpenAI Keys and Endpoint page is displayed, with the copy buttons for KEY 1 and Endpoint highlighted.](../../media/Solution/0302-azure-openai-keys-and-endpoint.png)
 
   - Return to your resource group and select the Azure Cosmos DB resource.
     - Under the **Settings** menu, select **Keys**, then show and copy the **PRIMARY CONNECTION STRING** value and paste it as the `CosmosDBConnectionString` value in the `local.settings.json` file.
   
-      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0202-azure-cosmos-db-keys.png)
+      ![They Azure Cosmos DB account Keys page is displayed, with the PRIMARY CONNECTION STRING copy button highlighted.](../../media/Solution/0302-azure-cosmos-db-keys.png)
 
   - The `DeploymentName` value is preset, based on the deployment created by the Bicep script. If that value differs in your environment, you will need to update this settings accordingly.
 
 - To test the function locally:
-  - Open a new terminal windows in Visual Studio Code and change the path to the `src/ContosoSuitesVectorizationFunction` folder.
-  - Open the `CosmosChangeFeedVectorization.cs` file in the `src/ContosoSuitesVectorizationFunction` folder.
+  - Open a new terminal windows in Visual Studio Code and change the path to the `src\ContosoSuitesVectorizationFunction` folder.
+  - Open the `CosmosChangeFeedVectorization.cs` file in the `src\ContosoSuitesVectorizationFunction` folder.
   - Set a breakpoint on line 50 so you can examine the values of the `documentsToVectorize`, `task.RequestVector`, and `input` as you step through the function.
   - Select **F5** on your keyboard to start a debug session in Visual Studio Code. In the terminal window created, wait until the function has started.
   - In a browser window, open the [Azure portal](https://portal.azure.com/) and navigate to your Cosmos DB account.
@@ -153,14 +153,14 @@ The key tasks are as follows:
   - Return to Visual Studio Code and select "Shift+F5" on the keyboard to stop the function app debug session.
 
 - The steps to deploy the function to Azure are as follows:
-  - In Visual Studio Code, open a new terminal window and change the directory to the `src/ContosoSuitesVectorizationFunction` project folder.
+  - In Visual Studio Code, open a new terminal window and change the directory to the `src\ContosoSuitesVectorizationFunction` project folder.
   - At the terminal prompt, execute the following command to build a release version of the function:
 
     ```bash
     dotnet build --configuration Release
     ```
 
-  - In the explorer pane in Visual Studio Code, navigate to the `src/ContosoSuitesVectorizationFunction\bin\Release\net8.0` folder, then right-click on the `publish` folder and in the context menu, select **Deploy to Function App**.
+  - In the explorer pane in Visual Studio Code, navigate to the `src\ContosoSuitesVectorizationFunction\bin\Release\net8.0` folder, then right-click on the `publish` folder and in the context menu, select **Deploy to Function App**.
   - In the **Select Function App** command pallet dialog that appears at the top of Visual Studio Code:
     - Select the subscription you are using for this exercise.
     - Choose the function app in your resource group.
@@ -168,7 +168,7 @@ The key tasks are as follows:
   - Use the **Output** window at the bottom of Visual Studio Code to monitor the deployment.
   - When the deployment completes, you will get a notification in the bottom right-hand corner of Visual Studio Code. In this notification window, select **Upload settings**. This will upload the values from the `local.settings.json` file into environment variables in your function app.
 
-    ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0202-azure-function-deployment-upload-settings.png)
+    ![The Upload settings button is highlighted on the deployment completed notification dialog.](../../media/Solution/0302-azure-function-deployment-upload-settings.png)
 
   - Confirm the settings were uploaded correctly by navigating to the **Settings** menu of your function app in the [Azure portal](https://portal.azure.com/) and selecting **Environment variables**. You should see the `AzureOpenAIEndpoint`, `AzureOpenAIKey`, `CosmosDBConnectionString`, and `DeploymentName` settings, along with other settings added by the Bicep script and deployment process.
 
@@ -195,20 +195,20 @@ The key tasks are as follows:
   - In the [Azure portal](https://portal.azure.com), navigate to your Cosmos DB resource and select **Data Explorer** in the left-hand menu.
   - In the Data Explorer, expand the **ContosoSuites** database and the **MaintenanceRequests** container, then select **Items**.
 
-    ![Data Explorer is highlighted in the left-hand menu. The expand icon is highlighted for the database and MaintenanceRequests containers. Items is highlighted.](../../media/Solution/0202-azure-cosmos-db-data-explorer-maintenance-requests-items.png)
+    ![Data Explorer is highlighted in the left-hand menu. The expand icon is highlighted for the database and MaintenanceRequests containers. Items is highlighted.](../../media/Solution/0302-azure-cosmos-db-data-explorer-maintenance-requests-items.png)
 
   - Select **Upload Item** on the toolbar.
 
-    ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0202-azure-cosmos-db-toolbar-upload-item.png)
+    ![The Upload Item button on the Azure Cosmos DB toolbar is highlighted.](../../media/Solution/0302-azure-cosmos-db-toolbar-upload-item.png)
 
-  - In the **Upload Items** dialog, select the browse button and navigate to the `PropertyMaintenance.json` file in the `/src/data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
+  - In the **Upload Items** dialog, select the browse button and navigate to the `PropertyMaintenance.json` file in the `src\data` directory in the location where cloned the repository, then select **Upload** to import the data in the file.
 
-    ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0202-upload-items-property-maintenance.png)
+    ![The Upload Items dialog is displayed with the browse and Upload buttons highlighted. UserReviews.json appears in the Select JSON files box.](../../media/Solution/0302-upload-items-property-maintenance.png)
 
   - Return to the Function Apps **Log Stream** browser window you opened in the previous step and observe the logs as the maintenance request are bulk uploaded and processed.
   - Return to the Cosmos DB `MaintenanceRequests` browser window, close the upload dialog, and select the refresh icon on the MaintenanceRequests>Items tab in the Data Explorer.
 
-    ![The refresh button is highlighted on the Maintenance->Items tab in Data Explorer.](../../media/Solution/0202-azure-cosmos-db-maintenance-requests-items-refresh.png)
+    ![The refresh button is highlighted on the Maintenance->Items tab in Data Explorer.](../../media/Solution/0302-azure-cosmos-db-maintenance-requests-items-refresh.png)
 
   - Select a few random request items to ensure they contain a `request_vector` value and have a `type` of "Vectorized".
 
@@ -217,7 +217,7 @@ The key tasks are as follows:
   - In the Data Explorer, expand the **ContosoSuites** database and the **MaintenanceRequests** container, then select **Items**.
   - On the toolbar, select **New SQL Query**.
 
-    ![The New SQL Query button on the Data Explorer Items toolbar is highlighted.](../../media/Solution/0202-azure-cosmos-db-data-explorer-items-new-sql-query.png)
+    ![The New SQL Query button on the Data Explorer Items toolbar is highlighted.](../../media/Solution/0302-azure-cosmos-db-data-explorer-items-new-sql-query.png)
 
   - In the new query window, paste in the following query:
 
@@ -226,7 +226,7 @@ The key tasks are as follows:
     FROM c
     ```
 
-  - Replace the `<QUERY_VECTOR>` token in the query with the vectorized representation of "air conditioning malfunction," which you can find in the `Query_Vector.txt` file in the [/src/data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data). Copy the entire contents of the file, and paste it into the query in place of `<QUERY_VECTOR>`.
+  - Replace the `<QUERY_VECTOR>` token in the query with the vectorized representation of "air conditioning malfunction," which you can find in the `Query_Vector.txt` file in the [src\data folder](https://github.com/microsoft/TechExcel-Integrating-Azure-PaaS-and-AI-Services-for-AI-Design-Wins/tree/main/src/data). Copy the entire contents of the file, and paste it into the query in place of `<QUERY_VECTOR>`.
   - Select **Execute Query** on the toolbar and observe the output in the **Results** panel. You should see results similar to the following:
 
     ```json
