Stubbing out vector search solution

--- a/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
+++ b/docs/03_implement_vector_search_in_cosmos_db_nosql/0303.md
@@ -13,12 +13,12 @@ TODO: Add short intro.
 
 ## Description
 
-In the previous task, you added vector embeddings to property maintenance request data stored in Azure Cosmos DB for NoSQL and then performed a vector search using embeddings stored in a file. To perform vector searches, it is necessary to create embeddings for incoming query text, so in this task, you will integrate vector search capabilities into the Contoso Suites Customer Information System (CIS) application, leveraging a vectorization API endpoint in the Contoso Suites Web API. The API will be used to vectorize incoming questions from the UI, so they can be used in queries executing the `VectorDisntance()` function.
+In the previous task, you added vector embeddings to property maintenance request data stored in Azure Cosmos DB for NoSQL and then performed a vector search using query embeddings stored in a file. To perform vector searches, it is necessary to create embeddings for incoming query text, so in this task, you will integrate vector search capabilities into the Contoso Suites Customer Information System (CIS) application, leveraging a vectorization API endpoint in the Contoso Suites Web API to create embeddings for the query being performed. The API will be used to vectorize incoming questions from the UI, so they can be used in queries executing the `VectorDistance()` function.
 
 The key tasks are as follows:
 
 1. Generate query text embeddings using the `/Vectorize` endpoint of the ContosoSuitesWebAPI.
-2. Add vector search to the UI.
+2. Add vector search to the UI, leveraging funtion calling.
 3. Integrate...
 
 ## Success Criteria
@@ -80,5 +80,21 @@ TODO...
 
   - Replace the `<QUERY_VECTOR>` token in the query with the vector output you copied from the API response body.
   - Select **Execute Query** on the toolbar and observe the output in the **Results** panel.
+
+- TODO: Add note to ensure the web api is still running locally for testing...
+
+- Open the file `src\ContosoSuitesDashboard\pages\3_Vector_Search.py`. The code will run as-is, but will not have knowledge of how to perform vector searches. The support vector search capabilities, make the following changes to the Python script.
+  - Add...
+  - Change the ... 
+  - Test your code by opening a new terminal window in Visual Studio Code, navigating to the `src\ContosoSuitesDashboard` folder, then running the following command to start the Streamlit dashboard:
+
+    ```python
+    python -m streamlit run Index.py
+    ```
+
+- Navigate to the **Vector Search** page using the left-hand menu, and then submit each of the following queries for maintenance requests:
+  - "Show me rooms where the air conditioning unit is malfunctioning"
+  - TODO...
+  - TODO...
 
 </details>
